<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Gemma</name>
	<groupId>gemma</groupId>
	<artifactId>gemma</artifactId>
	<version>1.6-SNAPSHOT</version>
	<inceptionYear>2005</inceptionYear>
	<description>
		The Gemma Project for meta-analysis of genomics data
	</description>
	<url>http://www.chibi.ubc.ca/Gemma</url>
	<organization>
		<name>UBC Centre for High-throughput Biology</name>
		<url>http://www.chibi.ubc.ca/</url>
	</organization>
	<modules>
		<module>gemma-util</module>
		<module>gemma-mda</module>
		<module>gemma-core</module>
		<module>gemma-web</module>
	</modules>
	<packaging>pom</packaging>
	<scm>
		<connection>scm:cvs:ext:@katz.pavlab.chibi.ubc.ca:/space/cvs:Gemma</connection>
		<developerConnection>scm:cvs:ext:@katz.pavlab.chibi.ubc.ca:/space/cvs:Gemma</developerConnection>
		<url>http://www.chibi.ubc.ca/faculty/pavlidis/fisheye/browse/pavlab/Gemma</url>
	</scm>
	<issueManagement>
		<system>Bugzilla</system>
		<url>
			http://chibi.ubc.ca/faculty/pavlidis/lab/bugs/buglist.cgi?product=Gemma&amp;bug_status=__open__
		</url>
	</issueManagement>
	<ciManagement>
		<system>continuum</system>
		<url>http://chibi.ubc.ca/faculty/pavlidis/continuum</url>
		<notifiers>
			<notifier>
				<type>mail</type>
				<sendOnError>true</sendOnError>
				<sendOnFailure>true</sendOnFailure>
				<sendOnSuccess>true</sendOnSuccess>
				<sendOnWarning>true</sendOnWarning>
				<configuration>
					<address>paul@chibi.ubc.ca</address>
				</configuration>
			</notifier>
		</notifiers>
	</ciManagement>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Paul Pavlidis</name>
			<id>pavlidis</id>
			<email>paul@chibi.ubc.ca</email>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Anton Zoubarev</name>
			<id>azoubarev</id>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Thea Van Rossum</name>
			<id>thea</id>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Cam MacDonald</name>
			<id>cam</id>
			<organization>University of British Columbia</organization>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Kiran Keshav</name>
		</contributor>
		<contributor>
			<name>Kelsey Hamer</name>
		</contributor>
		<contributor>
			<name>Louise Donnison</name>
		</contributor>
		<contributor>
			<name>Leon French</name>
		</contributor>
		<contributor>
			<name>Vaneet Lotay</name>
		</contributor>
		<contributor>
			<name>Joseph Santos</name>
		</contributor>
		<contributor>
			<name>David Quigley</name>
		</contributor>
		<contributor>
			<name>Anshu Sinha</name>
		</contributor>
		<contributor>
			<name>Suzanne Lane</name>
		</contributor>
		<contributor>
			<name>Meeta Mistry</name>
		</contributor>
		<contributor>
			<name>Xiang Wan</name>
		</contributor>
		<contributor>
			<name>Jesse Gillis</name>
		</contributor>
		<contributor>
			<name>Gavin Ha</name>
		</contributor>
		<contributor>
			<name>Adam Hall</name>
		</contributor>
		<contributor>
			<name>Raymond Lim</name>
		</contributor>
		<contributor>
			<name>Luke McCarthy</name>
		</contributor>
	</contributors>
	<dependencies>
		<dependency>
			<groupId>baseCode</groupId>
			<artifactId>baseCode</artifactId>
			<version>1.0.11-SNAPSHOT</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>3.3.2.GA</version>
		</dependency>
		<dependency>
			<!-- required by hibernate, explicitly import so we get it at runtime. -->
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.4.GA</version>
			<scope>runtime</scope>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.10</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>3.0.1.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>3.0.1.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>3.0.1.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>3.0.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>3.0.1.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>3.0.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>3.0.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>3.0.1.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>3.0.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>3.0.2.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>3.0.2.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-acl</artifactId>
			<version>3.0.2.RELEASE</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>3.0.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.6.6</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.6</version>
			<type>jar</type>
			<scope>run</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.5</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xerces</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-beanutils</groupId>
					<artifactId>commons-beanutils-bean-collections</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-beanutils</groupId>
					<artifactId>commons-beanutils-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-digester</groupId>
					<artifactId>commons-digester</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.0.4</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.5.8</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.5.8</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.2</version>
			<scope>test</scope>
			<type>jar</type>
		</dependency>
	</dependencies>
	<reporting>
		<outputDirectory>target/site</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>
					maven-project-info-reports-plugin
				</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependencies</report>
							<report>dependency-convergence</report>
							<report>index</report>
							<report>project-team</report>
							<report>cim</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>scm</report>
							<report>summary</report>
							<report>mailing-list</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<quiet>true</quiet>
					<aggregate>false</aggregate>
					<links>
						<link>
							http://java.sun.com/j2ee/1.4/docs/api
						</link>
						<link>
							http://java.sun.com/j2se/1.5.0/docs/api
						</link>
						<link>
							http://jakarta.apache.org/commons/collections/apidocs-COLLECTIONS_3_0/
						</link>
						<link>
							http://jakarta.apache.org/commons/dbcp/apidocs/
						</link>
						<link>
							http://jakarta.apache.org/commons/fileupload/apidocs/
						</link>
						<link>
							http://jakarta.apache.org/commons/httpclient/apidocs/
						</link>
						<link>
							http://commons.apache.org/logging/apidocs/
						</link>
						<link>
							http://jakarta.apache.org/commons/pool/apidocs/
						</link>
						<link>
							http://logging.apache.org/log4j/docs/api/
						</link>
						<link>
							http://jakarta.apache.org/regexp/apidocs/
						</link>
						<link>
							http://jakarta.apache.org/velocity/api/
						</link>
						<link>
							http://dsd.lbl.gov/~hoschek/colt/api/
						</link>
						<link>
							http://static.springframework.org/spring/docs/2.0.7/api/
						</link>
						<link>
							http://www.hibernate.org/hib_docs/v3/api/
						</link>
					</links>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1.2g -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						-Xmx1200M -ea -Djava.awt.headless=true -XX:MaxPermSize=256m
					</argLine>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<excludes>
						<exclude>**/*Abstract*</exclude>
						<exclude>**/*IntegrationTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<!--<version>2.0-beta-5</version>  2.0-beta-8 hangs on cvs update -->
				<configuration>
					<allowTimestampedSnapshots>
						true
					</allowTimestampedSnapshots>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>pavlab</id>
			<name>PavLab</name>
			<url>
				http://www.chibi.ubc.ca/maven2
			</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
		<repository>
			<id>ibiblio</id>
			<name>ibiblio</name>
			<url>
				http://mirrors.ibiblio.org/pub/mirrors/maven2
			</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>

		<repository>
			<id>central</id>
			<name>central</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>spring</id>
			<name>Spring Portfolio Repository</name>
			<url>http://s3.amazonaws.com/maven.springframework.org/release</url>
		</repository>
		<repository>
			<id>jboss</id>
			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
		</repository>

		<!--
			<repository> <id>sonatype-sourceforge</id>
			<url>http://oss.sonatype.org/content/repositories/sourceforge-releases</url> </repository>
		-->

	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>apache.plugin.snapshots</id>
			<name>Apache Development Repository</name>
			<url>http://cvs.apache.org/maven-snapshot-repository</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>mojo</id>
			<name>Mojo</name>
			<url>http://snapshots.maven.codehaus.org/maven2/</url>
			<layout>default</layout>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>pavlab</id>
			<name>PavLab</name>
			<url>
				http://www.chibi.ubc.ca/maven2
			</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</releases>
		</pluginRepository>
	</pluginRepositories>
	<profiles>
		<profile>
			<id>assemble-src</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>assemble-src</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<descriptors>
								<descriptor>
									src/assembly/src-assembly.xml
								</descriptor>
							</descriptors>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>assemble-bin</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>assemble-bin</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<descriptors>
								<descriptor>
									src/assembly/bin-assembly.xml
								</descriptor>
							</descriptors>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- For deployment where host is local (and ssh isn't available for builder, e.g. CI)
-->
			<id>local-deploy</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>deploy.local</name>
				</property>
			</activation>
			<distributionManagement>
				<site>
					<id>localDeploy</id>
					<name>localDeploy</name>
					<url>file:///space/gemmaData/gemma-devsite</url>
				</site>
				<repository>
					<id>repo</id>
					<name>Pavlab</name>
					<url>file:///space/maven2</url>
				</repository>
				<snapshotRepository>
					<id>repo</id>
					<name>Pavlab</name>
					<url>file:///space/maven2</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>
	<distributionManagement>
		<site>
			<id>website</id>
			<url>
				scp://katz.pavlab.chibi.ubc.ca:/space/gemmaData/gemma-devsite
			</url>
		</site>
		<repository>
			<id>repo</id>
			<name>Pavlab</name>
			<url>scp://katz.pavlab.chibi.ubc.ca:/space/maven2</url>
		</repository>
		<snapshotRepository>
			<id>repo</id>
			<name>Pavlab</name>
			<url>scp://katz.pavlab.chibi.ubc.ca:/space/maven2</url>
		</snapshotRepository>
	</distributionManagement>

</project>